# pi-server

./: .gitignore  Makefile  README.md  ecosystem.config.cjs
backend/: Cargo.toml  Dockerfile
backend/src/: apk_meta.rs  config.rs  errors.rs  main.rs  models.rs
backend/src/handlers/: api.rs  apps.rs  download.rs  files.rs  mod.rs  system.rs  upload.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AppStorePanel.jsx  BrowseFilesPanel.jsx  SendFilePanel.jsx  ViewApiPanel.jsx
frontend/src/components/ui/: BevelButton.jsx  GrooveRule.jsx  WindowFrame.jsx
frontend/src/lib/: api.js
frontend/src/styles/: animations.css  base.css  components.css  index.css  tokens.css
nginx/: Dockerfile  nginx.conf
