[package]
name = "pi_server_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
sysinfo = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
